--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^4.0.0 <7.0.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^=5.13.0"
   }
 }
