--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongodb": "4.1.0",
-    "mongoose": "5.13.0"
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1"
   }
 }
