--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "keywords": [],
-  "author": "Daniel Molina",
+  "author": "Johan Sebastian Beltran",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.44.0",
@@ -23,7 +23,6 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^6.10.1"
   }
 }
